Fix scrollbar compensate initialization and update styles

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -6,3 +6,6 @@ $diamodal-color-dark: #1d1d1d !default;
 $diamodal-color-gray--light: #eff2f6 !default;
 $diamodal-color-gray--dark: #9c9c9c !default;
 $diamodal-color-error: #f44336 !default;
+
+$diamodal-default-text-color: $diamodal-color-dark !default;
+$diamodal-secondary-text-color: #888888 !default;
