--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 // font
 $diamodal-base-font-size: 16px !default;
+$diamodal-base-font-family: inherit !default;
 
 // easings
 $ease-out-cubic: cubic-bezier(0.2, 0.5, 0.3, 1) !default;
