--- a/src/scss/components/_diamodal-scrollbar-compensate.scss
+++ b/src/scss/components/_diamodal-scrollbar-compensate.scss
@@ -3,5 +3,5 @@ body.diamodal-active {
 }
 
 body.diamodal-scrollbar-compensate {
-    overflow: hidden;
+    overflow: hidden !important;
 }
